# othello-demo

./: .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.txt
CI/: build.sh
package/: OthelloDemo  README.md  run.sh
package/lib/: libEGL.so.1  libGL.so.1
src/: canvascircle.cpp  canvascircle.h  gameoverwindow.h  main.cpp  messagewindow.cpp  messagewindow.h  mycircle.cpp  mycircle.h  othellowindow.cpp  othellowindow.h
src/.archived/: gameoverwindow.cpp.deprecated  messagewindow.h.deprecated  othellowindow.cpp.deprecated  othellowindow.h.deprecated
